--- a/section17/todo.html
+++ b/section17/todo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List 만들기</title>
-    <link rel="stylesheet" href="css/todo.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -26,6 +26,6 @@
       <ul id="todo-list"></ul>
     </div>
 
-    <script src="js/todo.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
